# flare-ai-rag

./: .env.example  Dockerfile  README.md  pyproject.toml
chat-ui/: package-lock.json
chat-ui/src/: App.js
src/data/: docs.csv  free_models.json  models.json
src/flare_ai_rag/: input_parameters.json  main.py  query.txt  settings.py  state.py
src/flare_ai_rag/ai/: __init__.py  base.py  gemini.py  model.py  openrouter.py
src/flare_ai_rag/api/routes/: chat.py
src/flare_ai_rag/discord/: service.py
src/flare_ai_rag/prompts/: library.py  schemas.py  service.py  templates.py
src/flare_ai_rag/responder/: __init__.py  base.py  config.py  prompts.py  responder.py
src/flare_ai_rag/retriever/: __init__.py  base.py  config.py  qdrant_collection.py  qdrant_retriever.py
src/flare_ai_rag/router/: __init__.py  base.py  config.py  prompts.py  router.py
src/flare_ai_rag/utils/: __init__.py  file_utils.py  parser_utils.py
tests/: open_router_credits.py  open_router_models.py  test_generate_collection.py  test_qdrant_retriever.py  test_responder.py  test_router.py
